--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                         </li>
                     </ul>
                 </div>
-                <div class="hd_signIn" data-signIn="0" id="hd_signIn">
+                <div class="hd_signIn" id="hd_signIn" data-signIn="0">
                     <div data-signIn="0">
-                        <form class="signIn_ipt">
+                        <div class="signIn_ipt">
                             <label>
                                 <span>帳號</span>
                                 <input type="text">
@@ -72,7 +72,7 @@
                                 <button data-btn="signIn">登入</button>
                                 <button data-btn="regd">註冊</button>
                             </div>
-                        </form>
+                        </div>
                     </div>
                    
                     <div data-signIn="1">
