--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <span>TOP</span>
             </div>
             <div class="god">
-                <img src="./images/god2.gif">
+                <img src="./images/god.gif">
             </div>
         </div>
     </div>
