--- a/index.html
+++ b/index.html
@@ -155,8 +155,10 @@
                 <img src="./images/icon/arrow-top.png">
                 <span>TOP</span>
             </div>
-            <div class="god">
-                <img src="./images/god.gif">
+            <div class="todayGame">
+                <div class="god">
+                    <img src="./images/god.gif">
+                </div>    
             </div>
         </div>
     </div>
