--- a/index.html
+++ b/index.html
@@ -118,16 +118,19 @@
                 <li class="on">
                     <a href="#/home">主頁</a>
                 </li>
-                <li><a href="#/lottery">博彩推薦</a></a></li>
+                <li><a href="#/lottery">博彩推薦</a></a>
+                </li>
                 <li><a href="#/news">新聞</a></li>
                 <li><a href="#/broadcast">足球轉播</a></li>
                 <li><a href="#/forum">討論區</a></li>
                 <li><a href="#/resources">資源</a></li>
-                <li><a href="#/game">
+                <li>
+                    <a href="#/game">
                         <div class="menu_game">
                             <img src="images/menu_gameBtn.png">
                         </div>
-                    </a></li>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
@@ -135,15 +138,15 @@
     <!-- ===== content start ===== -->
     <div class="mainCnt">
         <div class="content" id="content"></div>
+
         <div class="leftTool" id="leftTool">
             <div class="floatAd">
                 <img src="images/adBanner/floatAd-01.jpg">
                 <img src="images/adBanner/floatAd-02.jpg">
             </div>
-            <div class="getGift">
+            <div class="getGift" id="getGift">
                 <img src="images/gift.png">
             </div>
-
         </div>
 
         <div class="rightTool" id="rightTool">
@@ -152,13 +155,13 @@
                 <img src="images/adBanner/floatAd-04.jpg">
             </div>
             <div class="goTop" id="goTop">
-                <img src="./images/icon/arrow-top.png">
+                <img src="images/icon/arrow-top.png">
                 <span>TOP</span>
             </div>
-            <div class="todayGame">
+            <div class="todayGame" id="todayGame">
                 <div class="god">
-                    <img src="./images/god.gif">
-                </div>    
+                    <img src="images/god.png">
+                </div>
             </div>
         </div>
     </div>
@@ -205,7 +208,8 @@
                 <div class="ft_menu">
                     <ul>
                         <li><a href="#/home">主頁</a></li>
-                        <li><a href="#/lottery">博彩推薦</a></a></li>
+                        <li><a href="#/lottery">博彩推薦</a></a>
+                        </li>
                         <li><a href="#/news">新聞</a></li>
                         <li><a href="#/broadcast">足球轉播</a></li>
                         <li><a href="#/forum">討論區</a></li>
