--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/all.css">
-    <title>VNC88</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- 外掛插件 -->
+    <script src="js/swipeslider.js"></script>
+    <script src="js/marquee.js"></script>
     <script src="js/router.js"></script>
+    <!-- 自訂義js -->
     <script src="js/index.js"></script>
+
+
+    <title>VNC88</title>
 </head>
 
 <body>
-
     <!-- ===== header start ===== -->
     <div class="header">
         <!-- hd_top start -->
@@ -135,6 +140,9 @@
         </div>
     </div>
 
+    
+    
+
     <!-- ===== content start ===== -->
     <div class="mainCnt">
         <div class="content" id="content"></div>
@@ -243,7 +251,22 @@
 
 
 
-    <script>
+    <script type="text/javascript">
+        $(window).load(function() {
+            $('#full_feature').swipeslider();
+            $('#content_slider').swipeslider({
+                transitionDuration: 600,
+                autoPlayTimeout: 10000,
+                sliderHeight: '300px'
+            });
+            $('#responsiveness').swipeslider();
+            $('#customizability').swipeslider({
+                transitionDuration: 1500,
+                autoPlayTimeout: 4000,
+                timingFunction: 'cubic-bezier(0.38, 0.96, 0.7, 0.07)',
+                sliderHeight: '30%'
+            });
+        });
     </script>
 </body>
 
