--- a/index.html
+++ b/index.html
@@ -140,38 +140,101 @@
         </div>
     </div>
 
-    
-    
+
+
 
     <!-- ===== content start ===== -->
     <div class="mainCnt">
-        <div class="content" id="content"></div>
+        <div class="contBox-full">
+            <!-- 首頁輪播 -->
+            <div id="full_feature" class="swipslider">
+                <ul class="sw-slides">
+                    <li class="sw-slide">
+                        <img src="images/carousel/topBanner-01.jpg">
+                    </li>
+                    <li class="sw-slide">
+                        <img src="images/carousel/topBanner-02.jpg">
+                    </li>
+                    <li class="sw-slide">
+                        <img src="images/carousel/topBanner-03.jpg">
+                    </li>
+                    <li class="sw-slide">
+                        <img src="images/carousel/topBanner-04.jpg">
+                    </li>
+                </ul>
+            </div>
 
-        <div class="leftTool" id="leftTool">
-            <div class="floatAd">
-                <img src="images/adBanner/floatAd-01.jpg">
-                <img src="images/adBanner/floatAd-02.jpg">
+            <!-- marquee start -->
+            <div class="marquee">
+                <div class="marqueeBox">
+                    <div>
+                        <span>最新消息：</span>
+                        <ul id="marquee" class="marquee_body">
+                            <li>現在測試跑馬燈 (*´∀`)~ ♥</li>
+                            <li>電子遊戲已開放，歡迎玩家點擊「SLOT GAME」進入遊戲，祝您遊戲愉快 (๑ơ ₃ ơ)♥</li>
+                            <li>跑馬燈要乖乖不要亂跑，跑馬燈要乖乖不要亂跑，跑馬燈要乖乖不要亂跑，跑馬燈要乖乖不要亂跑，跑馬燈要乖乖不要亂跑，跑馬燈要乖乖不要亂跑，跑馬燈要乖乖不要亂跑 !!</li>
+                        </ul>
+                        <div class="btn_linear_c1 btn">
+                            <div class="btn_cnt">詳情</div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="getGift" id="getGift">
-                <img src="images/gift.png">
-            </div>
-        </div>
 
-        <div class="rightTool" id="rightTool">
-            <div class="floatAd">
-                <img src="images/adBanner/floatAd-03.jpg">
-                <img src="images/adBanner/floatAd-04.jpg">
-            </div>
-            <div class="goTop" id="goTop">
-                <img src="images/icon/arrow-top.png">
-                <span>TOP</span>
-            </div>
-            <div class="todayGame" id="todayGame">
-                <div class="god">
-                    <img src="images/god.png">
+            <div class="contBox-min">
+                <div class="leftTool" id="leftTool">
+                    <div class="floatAd">
+                        <img src="images/adBanner/floatAd-01.jpg">
+                        <img src="images/adBanner/floatAd-02.jpg">
+                    </div>
+                    <div class="getGift" id="getGift">
+                        <img src="images/gift.png">
+                    </div>
+                </div>
+
+                <!-- flexAd start -->
+                <div class="flexAd">
+                    <ul>
+                        <li>
+                            <img src="./images/adBanner/adBanner-01.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/adBanner/adBanner-02.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/adBanner/adBanner-03.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/adBanner/adBanner-04.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/adBanner/adBanner-05.jpg">
+                        </li>
+                        <li>
+                            <img src="./images/adBanner/adBanner-05.jpg">
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="rightTool" id="rightTool">
+                    <div class="floatAd">
+                        <img src="images/adBanner/floatAd-03.jpg">
+                        <img src="images/adBanner/floatAd-04.jpg">
+                    </div>
+                    <div class="goTop" id="goTop">
+                        <img src="images/icon/arrow-top.png">
+                        <span>TOP</span>
+                    </div>
+                    <div class="todayGame" id="todayGame">
+                        <div class="god">
+                            <img src="images/god.png">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="content" id="content"></div>
     </div>
 
     <!-- ===== footer start ===== -->
@@ -247,6 +310,14 @@
 
     <!-- ===== dialogCnt start ===== -->
     <div class="dialogCnt" id="dialogCnt"></div>
+
 </body>
 
+<script>
+    // 啟動輪播&跑馬燈外掛
+    $('#full_feature').swipeslider();
+    $("#marquee").marquee({
+        pauseOnHover: true
+    });
+</script>
 </html>
