--- a/index.html
+++ b/index.html
@@ -194,6 +194,22 @@
                     </div>
                 </div>
 
+                <div class="rightTool" id="rightTool">
+                    <div class="floatAd">
+                        <img src="images/adBanner/floatAd-03.jpg">
+                        <img src="images/adBanner/floatAd-04.jpg">
+                    </div>
+                    <div class="goTop" id="goTop">
+                        <img src="images/icon/arrow-top.png">
+                        <span>TOP</span>
+                    </div>
+                    <div class="todayGame" id="todayGame">
+                        <div class="god">
+                            <img src="images/god.png">
+                        </div>
+                    </div>
+                </div>
+
                 <!-- flexAd start -->
                 <div class="flexAd">
                     <ul>
@@ -218,25 +234,12 @@
                     </ul>
                 </div>
 
-                <div class="rightTool" id="rightTool">
-                    <div class="floatAd">
-                        <img src="images/adBanner/floatAd-03.jpg">
-                        <img src="images/adBanner/floatAd-04.jpg">
-                    </div>
-                    <div class="goTop" id="goTop">
-                        <img src="images/icon/arrow-top.png">
-                        <span>TOP</span>
-                    </div>
-                    <div class="todayGame" id="todayGame">
-                        <div class="god">
-                            <img src="images/god.png">
-                        </div>
-                    </div>
-                </div>
+                <!-- content start -->
+                <div class="content" id="content"></div>  
             </div>
         </div>
 
-        <div class="content" id="content"></div>
+       
     </div>
 
     <!-- ===== footer start ===== -->
