--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vie">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" / >
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/all.css">
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -123,7 +123,7 @@
         <div class="hd_menu" id="hd_menu">
             <ul>
                 <li class="on">
-                    <a href="#/home">主頁</a>
+                    <a href="#/home">TRANG CHỦ</a>
                 </li>
                 <li><a href="#/lottery">博彩推薦</a></a>
                 </li>
@@ -235,11 +235,11 @@
                 </div>
 
                 <!-- content start -->
-                <div class="content" id="content"></div>  
+                <div class="content" id="content"></div>
             </div>
         </div>
 
-       
+
     </div>
 
     <!-- ===== footer start ===== -->
@@ -279,11 +279,11 @@
         <div class="ft_bottom">
             <div>
                 <div class="copyright">
-                    <p>&copy; Copyright 2021 keobongco.com | </p>
+                    <p>&copy; Copyright 2021 VNC88.com | </p>
                 </div>
                 <div class="ft_menu">
                     <ul>
-                        <li><a href="#/home">主頁</a></li>
+                        <li><a href="#/home">TRANG CHỦ</a></li>
                         <li><a href="#/lottery">博彩推薦</a></a>
                         </li>
                         <li><a href="#/news">新聞</a></li>
@@ -341,7 +341,6 @@
     let db = firebase.firestore();
     let docRef = db.collection("showLive");
     let docRef2 = db.collection("ytMovie");
-   
 </script>
 
 </html>
