--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" / >
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/all.css">
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -21,6 +21,9 @@
 </head>
 
 <body>
+    <!-- <a href="#/newsRef" class="newsRef" data-news="1">1</a>
+    <a href="#/newsRef" class="newsRef" data-news="2">2</a> -->
+
     <!-- ===== header start ===== -->
     <div class="header">
         <!-- hd_top start -->
@@ -143,8 +146,6 @@
     </div>
 
 
-
-
     <!-- ===== content start ===== -->
     <div class="mainCnt">
         <div class="contBox-full">
@@ -235,11 +236,11 @@
                 </div>
 
                 <!-- content start -->
-                <div class="content" id="content"></div>  
+                <div class="content" id="content"></div>
             </div>
         </div>
 
-       
+
     </div>
 
     <!-- ===== footer start ===== -->
@@ -341,7 +342,6 @@
     let db = firebase.firestore();
     let docRef = db.collection("showLive");
     let docRef2 = db.collection("ytMovie");
-   
 </script>
 
 </html>
