--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
 <body>
     <!-- <a href="#/newsRef" class="newsRef" data-news="1">1</a>
-    <a href="#/newsRef" class="newsRef" data-news="2">2</a> -->
+    <a href="#/newsRef" class="newsRef" data-news="2">2</a>
+    <a href="#/newsRef" class="newsRef" data-news="3">3</a>
+    <a href="#/newsRef" class="newsRef" data-news="4">4</a> -->
 
     <!-- ===== header start ===== -->
     <div class="header">
