--- a/newsRef/news_1.html
+++ b/newsRef/news_1.html
@@ -5,41 +5,34 @@
             <!-- === 文章標題 === -->
             <div class="newsRef_title">
                 <!-- 標題文字 -->
-                <p>Không phải Sancho hay Varane, đây mới là thương vụ khôn ngoan nhất của Man Utd.</p>
+                <p>CHÍNH THỨC: Man Utd công bố bom tấn thứ 2 sau Sancho</p>
                 <!-- 標題時間 -->
-                <div class="txtDate">05:43 Thứ sáu 23/07/2021</div>
+                <div class="txtDate">01:11 Thứ tư 28/07/2021 </div>
             </div>
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span> Man Utd đã có được Jadon Sancho từ Borussia Dortmund và đang nỗ lực theo đuổi Raphael Varane của Real Madrid.
+                        <span class="selfTxt">VNC88.com</span> Trang chủ Quỷ đỏ đã đăng tải dòng thông báo đạt thỏa thuận với Real Madrid trong thương vụ Raphael Varane.
                     </li>
                     <li>
-                        Đây là 2 thương vụ hợp lý, dù nó khiến Man Utd tốn không ít công sức và tiền bạc. Sau đó, đội hình đội chủ sân Old Trafford vẫn cần được củng cố thêm, với tiền vệ phòng ngự là vị trí mà Ole Gunnar Solskjaer nên ưu tiên.
-                    </li>
-                    <li>
-                        <span class="color-b">Nhiều cầu thủ đã được liên kết với Quỷ đỏ</span> , trong đó có Declan Rice, Wilfred Ndidi hay Ruben Neves. Theo tin từ The Athletic, Wolves sẽ cân nhắc để Neves ra đi với giá chỉ 35 triệu bảng. Một báo cáo
-                        từ 90min cho biết chính Bruno Fernandes đã kêu gọi Man Utd chiêu mộ người đồng hương. Và cũng có thông tin cho biết Quỷ đỏ đã vượt mặt Arsenal ở thương vụ này.
+                        Manchester United đã xác nhận trên trang chủ câu lạc bộ họ đã đạt được thỏa thuận với Real Madrid về việc ký hợp đồng với Raphael Varane.
                     </li>
                 </ul>
-
             </div>
 
             <!-- === 文章圖片 === -->
             <div class="newsRef_img">
-                <img src="images/newsRef-01.jpg">
-                <p>Neves chững chạc trước tuổi.</p>
+                <img src="images/newsRef/newsRef-01.jpg">
+                <p>Thông báo từ trang chủ Man Utd.</p>
             </div>
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        Trở lại năm 2015, Neves trở thành đội trưởng trẻ nhất từng tham dự Champions League. Ở tuổi 18, anh đã dẫn dắt Porto giành chiến thắng trước Maccabi Haifa, phá kỷ lục cá nhân đã tồn tại trong 12 năm và nó vẫn còn tồn tại cho đến ngày nay. Mùa vừa qua,
-                        Wolves cùng Neves đã có bước lùi thật sự. Nhưng bước tiếp theo sẽ xác định liệu anh ấy có trở thành một cầu thủ đẳng cấp thế giới hay không. Chuyển đến Old Trafford chính là điều mà Neves cần. Nhưng tiền vệ 24 tuổi này có phải
-                        là người mà Man Utd cần?
+                        Theo chuyên gia David Ornstein của The Athletic, trung vệ người Pháp sẽ ký hợp đồng bốn năm với Quỷ đỏ kèm điều khoản tự động gia hạn thêm một năm.
                     </li>
                 </ul>
             </div>
@@ -47,8 +40,8 @@
             <!-- === 文章清單 === -->
             <div class="newsRef_list">
                 <ul>
-                    <li>Với Saul Niguez, Man Utd có 3 sự lựa chọn để sắp xếp đội hình.</li>
-                    <li> Không phải số 7, lộ diện số áo huyền thoại của Sancho tại Man Utd. </li>
+                    <li>Xong vụ Varane, Man Utd xác định mục tiêu tiếp theo</li>
+                    <li>Lộ bí mật cuộc gặp với Ancelotti, Varane quyết định chia tay Real</li>
                 </ul>
             </div>
 
@@ -56,38 +49,77 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        Trước hết, phải thừa nhận Neves có kinh nghiệm thi đấu ở Premier League và châu Âu, và anh được định giá với mức phí cực kỳ hợp lý, không giống như Declan Rice hay Wilfred Ndidi. Mùa vừa qua, dù bị cho là sa sút, Neves vẫn ghi được năm bàn thắng từ hàng
-                        tiền vệ ở Premier League, nhiều hơn Paul Pogba hai bàn, trong bối cảnh tiền vệ người Pháp không có tương lai rõ ràng tại Old Trafford.
+                        Mức phí chuyển nhượng là 34 triệu bảng + các khoản phụ phí và phía Real Madrid sẽ phải trả khoản tiền đào tạo cho câu lạc bộ cũ của Varane là Lens, đội bóng đang thi đấu tại Ligue 1.
                     </li>
+                    <li>
+                        Như thông báo trên trang chủ Man Utd, ngày kiểm tra y tế chưa rõ ràng vì các hạn chế kiểm dịch ở nước Anh.
+                    </li>
+                    <li>
+                        Sở dĩ Real Madrid sẵn sàng bán Varane vào mùa hè này bởi vì anh sẽ hết hạn hợp đồng vào năm tới. Đội bóng Hoàng gia cũng cần cải thiện thu nhập do tác động tài chính từ đại dịch và chi phí mở rộng sân vận động Bernabeu.
+                    </li>
+                    <li>
+                        Về phía Varane, người đại diện của anh đã trực tiếp trao đổi với chủ tịch Florentino Perez về mong muốn tìm kiếm thách thức mới ngoài Tây Ban Nha thay vì ký gia hạn. Tân huấn luyện viên Carlo Ancelotti cũng nắm bắt được tình hình từ sớm nhưng ưu tiên
+                        của ông là giữ chân những ngôi sao trên hàng công như Gareth Bale và Eden Hazard. Hai cái tên Ancelotti kỳ vọng có thể hồi sinh cho mùa giải mới.
+                    </li>
+
                 </ul>
             </div>
 
             <!-- === 文章圖片 === -->
             <div class="newsRef_img">
-                <img src="images/newsRef-02.jpg">
-                <p>Neves thật sự tài năng.</p>
+                <img src="images/newsRef/newsRef-02.jpg">
+                <p>Varane chọn Man Utd.</p>
             </div>
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
-                    <li>khoản phòng ngự, Neves đã có được số lần tắc bóng cao thứ năm tại Premier League mùa trước, và tổng số lần tắc bóng lẫn đánh chặn của anh ấy (136) là cao nhất trong đội Wolves. Con số đó ngang với Aaron Wan-Bissaka và cao hơn tất cả
-                        các cầu thủ Man Utd còn lại.</li>
-                    <li>Một khoản Neves cũng vượt trội là phạm vi chuyền bóng. Anh có khả năng kiến tạo từ vị trí lùi sâu theo cách tương tự như Michael Carrick. Và cơ hội tập luyện dưới sự dìu dắt của cựu tiền vệ Quỷ đỏ sẽ giúp anh tiến bộ hơn nữa. Mùa trước
-                        Neves đã hoàn thành 406 đường chuyền dài ở Premier League, hơn hẳn các cầu thủ Man Utd. Để so sánh, Fred có 250, Paul Pogba có 167 và Scott McTominay là 155.</li>
-                    <li>Với mức phí 35 triệu bảng, anh ấy rất đáng để Man Utd chiêu mộ, nhất là khi họ đã bỏ ra 73 triệu bảng để có Sancho, và có thể là 45 triệu bảng để có Varane. Neves bổ sung điều gì đó khác biệt cho hàng tiền vệ với sự kết hợp giữa chuyền
-                        và tắc bóng. Anh cũng có tiềm năng trở thành một cầu thủ tốt hơn với sự hỗ trợ của những đồng đội tài năng xung quanh. </li>
-                    <li>(Theo UnitedInfocus)</li>
-                    <li>Xem Bruno Fernandes ở ĐT Bồ Đào Nha</li>
+                    <li>Cập bến Old Trafford, Varane nhiều khả năng sẽ đá ở vị trí trung vệ lệch phải như một đối tác với Harry Maguire. Điều đó đồng nghĩa, Victor Lindelof sẽ trở thành phương án xoay tua sau hai mùa giải chắc suất đá chính dưới thời Ole
+                        Gunnar Solskjaer.</li>
+                    <li>Quỷ đỏ đã gia hạn với Eric Bailly vào tháng tư nhưng những lo ngại về phong độ và thể lực của trung vệ người Bờ Biển Ngà vẫn tồn tại, trong khi tài năng trẻ Axel Tuanzebe không thể hiện đủ phẩm chất để chen chân vào đội hình chính.</li>
+                    <li>Phân tích dữ liệu về trận đấu của Varane tại Madrid chỉ ra những con số chứng minh anh là phiên bản nâng cấp của Lindelof. Sau quãng thời gian chinh chiến cho Los Blancos, Varane đã mang về bộ sưu tập 3 chức vô địch La Liga, 1 Copa
+                        del Rey, 3 siêu cúp TBN, 4 Champions League, 3 siêu cúp châu Âu, 4 FIFA Club World Cup.</li>
+                    <li>Đồ họa dưới đây sử dụng dữ liệu từ chuyên trang smarterscout để tạo hồ sơ của một cầu thủ, chấm điểm họ từ 0 đến 99 theo nhiều chỉ số khác nhau, liên quan đến tần suất cầu thủ hoàn thành một hành động theo phong cách nhất định so với
+                        những đồng nghiệp chơi cùng vị trí hoặc đánh giá mức độ hiệu quả của họ theo chỉ số tương ứng.</li>
+                </ul>
+            </div>
+            <div class="newsRef_img">
+                <img src="images/newsRef/newsRef-03.jpg">
+                <p>Đồ họa của Lindelof mùa 2020/21.</p>
+            </div>
+            <div class="newsRef_img">
+                <img src="images/newsRef/newsRef-04.jpg">
+                <p>Đồ họa của Eric Bailly.</p>
+            </div>
+            <div class="newsRef_img">
+                <img src="images/newsRef/newsRef-05.jpg">
+                <p>Đồ họa của Raphael Varane.</p>
+            </div>
+            <div class="newsRef_txt">
+                <ul>
+                    <li>Sự nâng cấp đáng kể nhất của Varane so với Lindelof và Bailly là điểm 72 trên 99 cho “tác động phòng ngự”, với 40 của Lindelof và 22 của Bailly. Chỉ số này chứng tỏ rằng Varane đọc trận đấu tốt để ngăn chặn đối phương tịnh tiến bóng
+                        và chủ động giành lại quyền sở hữu.</li>
+                    <li>Không có gì đáng ngạc nhiên với chỉ số giữ bóng của Varane với kinh nghiệm dày dặn ở Madrid và tuyển Pháp. Anh được đánh giá 84 điểm, một sự cải thiện so với số 74 của Lindelof và 63 của Bailly.</li>
+                </ul>
+            </div>
+            <div class="newsRef_img">
+                <img src="images/newsRef/newsRef-06.jpg">
+                <p>Varane vượt trội Lindelof và Bailly khoản không chiến.</p>
+            </div>
+            <div class="newsRef_txt">
+                <ul>
+                    <li>Varane cũng được chờ đợi có thể giải quyết lỗ hỏng của United ở hệ thống phòng ngự, vốn đã trở thành điểm yếu chí mạng mùa giải trước. Anh được chấm 75/99 điểm cho những cú đánh đầu từ tình huống cố định và 83/99 từ những tình huống
+                        mở ở La Liga 2020/21, trong khi Lindelof cho thấy mình dễ bị tổn thương khi phải đối mặt với các tiền đạo mạnh mẽ, trung vệ người Thụy Điển bị đánh giá thấp với chỉ 10 và 44 điểm ở hai chỉ số.</li>
                 </ul>
             </div>
 
             <!-- === 文章影片 === -->
             <div class="newsRef_mv">
+                <p>Khả năng phòng ngự của Varane:</p>
                 <div>
                     <iframe width="100%" src="https://www.youtube.com/embed/sYS3jk1yGkg" frameborder="0"></iframe>
                 </div>
-                <p>Minh Tuấn | 05:13 23/07/2021</p>
+                <p>Thái Sơn | 00:41 28/07/2021</p>
             </div>
         </div>
 
