--- a/newsRef/news_2.html
+++ b/newsRef/news_2.html
@@ -5,41 +5,34 @@
             <!-- === 文章標題 === -->
             <div class="newsRef_title">
                 <!-- 標題文字 -->
-                <p>Không phải Sancho hay Varane, đây mới là thương vụ khôn ngoan nhất của Man Utd.</p>
+                <p>Đội hình với 11 'bom xịt' của Arsenal trong thế kỷ XXI </p>
                 <!-- 標題時間 -->
-                <div class="txtDate">05:43 Thứ sáu 23/07/2021</div>
+                <div class="txtDate">07:16 Thứ tư 28/07/2021</div>
             </div>
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span> Man Utd đã có được Jadon Sancho từ Borussia Dortmund và đang nỗ lực theo đuổi Raphael Varane của Real Madrid.
+                        <span class="selfTxt">VNC88.com</span> Hãy cùng điểm qua đội hình với 11 bản hợp đồng thất bại của Arsenal trong thế kỷ XXI theo quan điểm của ký giả Dave Seager (The Sun).
                     </li>
                     <li>
-                        Đây là 2 thương vụ hợp lý, dù nó khiến Man Utd tốn không ít công sức và tiền bạc. Sau đó, đội hình đội chủ sân Old Trafford vẫn cần được củng cố thêm, với tiền vệ phòng ngự là vị trí mà Ole Gunnar Solskjaer nên ưu tiên.
-                    </li>
-                    <li>
-                        <span class="color-b">Nhiều cầu thủ đã được liên kết với Quỷ đỏ</span> , trong đó có Declan Rice, Wilfred Ndidi hay Ruben Neves. Theo tin từ The Athletic, Wolves sẽ cân nhắc để Neves ra đi với giá chỉ 35 triệu bảng. Một báo cáo
-                        từ 90min cho biết chính Bruno Fernandes đã kêu gọi Man Utd chiêu mộ người đồng hương. Và cũng có thông tin cho biết Quỷ đỏ đã vượt mặt Arsenal ở thương vụ này.
+                        Thủ môn Vito Mannone. Thủ thành người Italia chỉ ra sân vỏn vẹn 23 lần trong 7 mùa giải gắn bó với Arsenal. Đến mùa Hè 2013, anh quyết định gia nhập Sunderland và có cơ hội bắt chính nhiều hơn.
                     </li>
                 </ul>
-
             </div>
 
             <!-- === 文章圖片 === -->
             <div class="newsRef_img">
-                <img src="images/newsRef-01.jpg">
-                <p>Neves chững chạc trước tuổi.</p>
+                <img src="images/newsRef/newsRef2-01.jpg">
+                <p>Mannone rất hiếm có cơ hội thi đấu cho Arsenal.</p>
             </div>
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        Trở lại năm 2015, Neves trở thành đội trưởng trẻ nhất từng tham dự Champions League. Ở tuổi 18, anh đã dẫn dắt Porto giành chiến thắng trước Maccabi Haifa, phá kỷ lục cá nhân đã tồn tại trong 12 năm và nó vẫn còn tồn tại cho đến ngày nay. Mùa vừa qua,
-                        Wolves cùng Neves đã có bước lùi thật sự. Nhưng bước tiếp theo sẽ xác định liệu anh ấy có trở thành một cầu thủ đẳng cấp thế giới hay không. Chuyển đến Old Trafford chính là điều mà Neves cần. Nhưng tiền vệ 24 tuổi này có phải
-                        là người mà Man Utd cần?
+                        Hậu vệ trái Andre Santos. Trái với kỳ vọng từ NHM, cựu tuyển thủ Brazil không tạo ra nhiều dấu ấn trong 2 năm gắn bó với đội bóng thành London. Anh thi đấu 33 trận và ghi được 3 bàn cho The Gunners.
                     </li>
                 </ul>
             </div>
@@ -47,8 +40,8 @@
             <!-- === 文章清單 === -->
             <div class="newsRef_list">
                 <ul>
-                    <li>Với Saul Niguez, Man Utd có 3 sự lựa chọn để sắp xếp đội hình.</li>
-                    <li> Không phải số 7, lộ diện số áo huyền thoại của Sancho tại Man Utd. </li>
+                    <li>Mỹ nhân Arsenal đi vào lịch sử FIFA Online</li>
+                    <li>Nếu chiêu mộ Buendia, Bissouma, đội hình Arsenal khủng đến cỡ nào?</li>
                 </ul>
             </div>
 
@@ -56,32 +49,67 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        Trước hết, phải thừa nhận Neves có kinh nghiệm thi đấu ở Premier League và châu Âu, và anh được định giá với mức phí cực kỳ hợp lý, không giống như Declan Rice hay Wilfred Ndidi. Mùa vừa qua, dù bị cho là sa sút, Neves vẫn ghi được năm bàn thắng từ hàng
-                        tiền vệ ở Premier League, nhiều hơn Paul Pogba hai bàn, trong bối cảnh tiền vệ người Pháp không có tương lai rõ ràng tại Old Trafford.
+                        Trung vệ Igors Stepanovs. Anh được HLV Arsene Wenger mang về Arsenal vào năm 2000 song không chứng tỏ được giá trị của bản thân. Trong 4 năm cống hiến tại Highbury, Stepanovs thi đấu tổng cộng 31 lần ở mọi đấu trường.
                     </li>
                 </ul>
             </div>
 
             <!-- === 文章圖片 === -->
             <div class="newsRef_img">
-                <img src="images/newsRef-02.jpg">
-                <p>Neves thật sự tài năng.</p>
+                <img src="images/newsRef/newsRef2-02.jpg">
+                <p>Squillaci không đáp ứng được kỳ vọng của BHL Arsenal.</p>
             </div>
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
-                    <li>khoản phòng ngự, Neves đã có được số lần tắc bóng cao thứ năm tại Premier League mùa trước, và tổng số lần tắc bóng lẫn đánh chặn của anh ấy (136) là cao nhất trong đội Wolves. Con số đó ngang với Aaron Wan-Bissaka và cao hơn tất cả
-                        các cầu thủ Man Utd còn lại.</li>
-                    <li>Một khoản Neves cũng vượt trội là phạm vi chuyền bóng. Anh có khả năng kiến tạo từ vị trí lùi sâu theo cách tương tự như Michael Carrick. Và cơ hội tập luyện dưới sự dìu dắt của cựu tiền vệ Quỷ đỏ sẽ giúp anh tiến bộ hơn nữa. Mùa trước
-                        Neves đã hoàn thành 406 đường chuyền dài ở Premier League, hơn hẳn các cầu thủ Man Utd. Để so sánh, Fred có 250, Paul Pogba có 167 và Scott McTominay là 155.</li>
-                    <li>Với mức phí 35 triệu bảng, anh ấy rất đáng để Man Utd chiêu mộ, nhất là khi họ đã bỏ ra 73 triệu bảng để có Sancho, và có thể là 45 triệu bảng để có Varane. Neves bổ sung điều gì đó khác biệt cho hàng tiền vệ với sự kết hợp giữa chuyền
-                        và tắc bóng. Anh cũng có tiềm năng trở thành một cầu thủ tốt hơn với sự hỗ trợ của những đồng đội tài năng xung quanh. </li>
-                    <li>(Theo UnitedInfocus)</li>
-                    <li>Xem Bruno Fernandes ở ĐT Bồ Đào Nha</li>
+                    <li>Trung vệ Sebastien Squillaci. Cầu thủ người Pháp chơi khá ổn định trong năm đầu tiên đến Arsenal (2010/11). Tuy nhiên ở 2 mùa giải cuối cùng, anh dường như mất hút và chỉ ra sân 7 lần ở mọi đấu trường.</li>
+                    <li>Hậu vệ phải Nelson Vivas. Anh được nhận được sự kỳ vọng lớn khi đặt chân đến Arsenal vào năm 1998. Ở mùa giải đầu tiên, Vivas đá chính 18 trận nhưng sau đó thì dần đánh mất vị trí. Mùa 1999/2000 anh được mang cho Celta Vigo mượn. Kể
+                        từ đó, cầu thủ người Argentina không còn chỗ đứng trong hàng ngũ Pháo Thủ và phải rời đi vào mùa Hè 2001.</li>
+                    <li>Tiền vệ trung tâm Denilson. Cầu thủ người Brazil đã có đến 153 trận thi đấu cho Arsenal trong 5 mùa giải. Tuy nhiên, chấn thương và sự xuất hiện của Jack Wilshere đã ảnh hưởng đến Denilson trong mùa giải 2009/10. Sau đó, anh quyết
+                        định rời đi vào cuối mùa 2010/11 và bày tỏ sự bất mãn trong thời gian cống hiến tại London.</li>
                 </ul>
             </div>
+            <div class="newsRef_img">
+                <img src="images/newsRef/newsRef2-03.jpg">
+                <p>Van Bronckhorst rời Arsenal vào năm 2004.</p>
+            </div>
+            <div class="newsRef_txt">
+                <ul>
+                    <li>Tiền vệ trung tâm Gio van Bronckhorst. Anh thi đấu cho Arsenal trong 3 mùa giải. Mọi chuyện đều khá êm xuôi trong 2 mùa giải đầu tiên khi anh ra sân đến 63 lần. Tuy nhiên ở mùa giải cuối cùng, chấn thương hoành hành khiến anh không
+                        còn vị trí ở Highbury và rời đi vào mùa Hè 2004.</li>
+                    <li>Tiền vệ trái Gervinho. Được xem là người kế vị Samir Nasri tại Arsenal tuy nhiên cầu thủ người Bờ Biển Ngà đã không thể hiện được nhiều. Anh rời đi sau 2 mùa giải.</li>
+                    <li>Tiền vệ phải Willian. Cầu thủ người Brazil hiện vẫn đang thi đấu trong thành phần của đội chủ sân Emirates. Sau những gì đã thể hiện trong màu áo Chelsea, anh <span class="color-b">bỗng chốc trở thành một cầu thủ vô hại trong mùa giải 2020/21 </span>vừa
+                        qua. Chưa kể, thời gian qua, dư luận nhắc nhiều đến thân hình “tròn trịa” của anh qua một bức ảnh được chụp trong trận giao hữu với Hibernian vào ngày 14/07.</li>
+                </ul>
+            </div>
+            <div class="newsRef_img">
+                <img src="images/newsRef/newsRef2-04.jpg">
+                <p>Willian không còn là chính mình khi đến đầu quân cho Arsenal.</p>
+            </div>
+            <div class="newsRef_txt">
+                <ul>
+                    <li>Hộ công Julio Baptista. Sau ánh hào quang thi đấu tỏa sáng trong màu áo Sevilla từ 2003-2005, Baptista đến Arsenal vào mùa Hè 2006 với sự kỳ vọng của NHM. Tuy nhiên anh chỉ ghi 3 bàn trong 24 trận thi đấu tại Ngoại hạng Anh mùa 2006/07.
+                        Và chỉ sau 1 mùa giải cầu thủ người Brazil trở về Real Madrid.</li>
+                    <li>Trung phong Francis Jeffers. Khởi đầu chậm chạp trong mùa giải đầu tiên (2001/02) đến mùa thứ 2 chân sút người Anh được ra sân đều đặn và ghi bàn nhiều hơn (thi đấu 28 trận và ghi 6 bàn). Nhưng thời gian cuối cùng ở Arsenal, anh không
+                        thể tìm được chỗ đứng và được mang cho Everton mượn (mùa 2003/04) và đến đầu quân cho Charlton vào tháng 8/2004.</li>
+                </ul>
+            </div>
+            <div class="newsRef_img">
+                <img src="images/newsRef/newsRef2-05.jpg">
+                <p>Đội hình với 11 bản hợp đồng thất bại của Arsenal theo ký giả Dave Seager (The Sun).</p>
+            </div>
+
+            <!-- === 文章影片 === -->
+            <div class="newsRef_mv">
+                <p>Arteta phát biểu về CĐV Arsenal: </p>
+                <div>
+                    <iframe width="100%" src="https://www.youtube.com/embed/sYS3jk1yGkg" frameborder="0"></iframe>
+                </div>
+                <p>Đăng Huy | 06:46 28/07/2021</p>
+            </div>
         </div>
+
         <div class="newsRef_menu">
             <div class="newsRef_hot" id="newsRef_hot">
                 <div class="mainMsg-title">tin tức nóng</div>
