--- a/newsRef/news_3.html
+++ b/newsRef/news_3.html
@@ -5,41 +5,39 @@
             <!-- === 文章標題 === -->
             <div class="newsRef_title">
                 <!-- 標題文字 -->
-                <p>Không phải Sancho hay Varane, đây mới là thương vụ khôn ngoan nhất của Man Utd.</p>
+                <p>Ronaldo gieo rắc hy vọng về một thương vụ bom tấn hoàn hảo cho M.U</p>
                 <!-- 標題時間 -->
-                <div class="txtDate">05:43 Thứ sáu 23/07/2021</div>
+                <div class="txtDate">08:06 Thứ tư 28/07/2021</div>
             </div>
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span> Man Utd đã có được Jadon Sancho từ Borussia Dortmund và đang nỗ lực theo đuổi Raphael Varane của Real Madrid.
+                        <span class="selfTxt">VNC88.com</span>Siêu sao người Bồ Đào Nha đã từng đưa ra những lời nhận xét chính xác về mục tiêu của Quỷ đỏ.
                     </li>
                     <li>
-                        Đây là 2 thương vụ hợp lý, dù nó khiến Man Utd tốn không ít công sức và tiền bạc. Sau đó, đội hình đội chủ sân Old Trafford vẫn cần được củng cố thêm, với tiền vệ phòng ngự là vị trí mà Ole Gunnar Solskjaer nên ưu tiên.
+                        Sau những nỗ lực trên bàn đàm phán, cuối cùng Manchester United cũng đã đạt thỏa thuận chiêu mộ trung vệ Raphael Varane từ phía Real Madrid. Giờ đây, ngôi sao người Pháp <span class="color-b">chỉ cần hoàn tất quá trình kiểm tra y tế</span>cùng
+                        một số thủ tục liên quan để chính thức ra mắt đội bóng mới.
                     </li>
                     <li>
-                        <span class="color-b">Nhiều cầu thủ đã được liên kết với Quỷ đỏ</span> , trong đó có Declan Rice, Wilfred Ndidi hay Ruben Neves. Theo tin từ The Athletic, Wolves sẽ cân nhắc để Neves ra đi với giá chỉ 35 triệu bảng. Một báo cáo
-                        từ 90min cho biết chính Bruno Fernandes đã kêu gọi Man Utd chiêu mộ người đồng hương. Và cũng có thông tin cho biết Quỷ đỏ đã vượt mặt Arsenal ở thương vụ này.
+                        Như vậy, Varane sẽ trở thành bản hợp đồng thứ 3 của Quỷ đỏ ở kỳ chuyển nhượng hè sau Tom Heaton và Jadon Sancho.
                     </li>
                 </ul>
-
             </div>
 
             <!-- === 文章圖片 === -->
             <div class="newsRef_img">
-                <img src="images/newsRef-01.jpg">
-                <p>Neves chững chạc trước tuổi.</p>
+                <img src="images/newsRef/newsRef3-01.jpg">
+                <p>Varane chuẩn bị ra mắt Man Utd.</p>
             </div>
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        Trở lại năm 2015, Neves trở thành đội trưởng trẻ nhất từng tham dự Champions League. Ở tuổi 18, anh đã dẫn dắt Porto giành chiến thắng trước Maccabi Haifa, phá kỷ lục cá nhân đã tồn tại trong 12 năm và nó vẫn còn tồn tại cho đến ngày nay. Mùa vừa qua,
-                        Wolves cùng Neves đã có bước lùi thật sự. Nhưng bước tiếp theo sẽ xác định liệu anh ấy có trở thành một cầu thủ đẳng cấp thế giới hay không. Chuyển đến Old Trafford chính là điều mà Neves cần. Nhưng tiền vệ 24 tuổi này có phải
-                        là người mà Man Utd cần?
+                        Tương tự như thương vụ bom tấn Sancho, việc chiêu mộ thành công Varane chính là lời khẳng định cho tham vọng cạnh tranh chức vô địch của Man Utd ở mùa giải sắp tới. Sự góp mặt của ngôi sao người Anh được xem như lời giải cho bài toán nơi hàng công Quỷ
+                        đỏ, trong khi đó Varane sẽ đảm nhận trọng trách gia tăng chất lượng cho khu vực phòng tuyến cùng với đội trưởng Harry Maguire.
                     </li>
                 </ul>
             </div>
@@ -47,8 +45,8 @@
             <!-- === 文章清單 === -->
             <div class="newsRef_list">
                 <ul>
-                    <li>Với Saul Niguez, Man Utd có 3 sự lựa chọn để sắp xếp đội hình.</li>
-                    <li> Không phải số 7, lộ diện số áo huyền thoại của Sancho tại Man Utd. </li>
+                    <li>Man Utd đón tân binh 16 tuổi từ Liverpool</li>
+                    <li>"Đúng, tôi đã từ chối đề nghị của Real"</li>
                 </ul>
             </div>
 
@@ -56,32 +54,41 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        Trước hết, phải thừa nhận Neves có kinh nghiệm thi đấu ở Premier League và châu Âu, và anh được định giá với mức phí cực kỳ hợp lý, không giống như Declan Rice hay Wilfred Ndidi. Mùa vừa qua, dù bị cho là sa sút, Neves vẫn ghi được năm bàn thắng từ hàng
-                        tiền vệ ở Premier League, nhiều hơn Paul Pogba hai bàn, trong bối cảnh tiền vệ người Pháp không có tương lai rõ ràng tại Old Trafford.
+                        Bằng kinh nghiệm trận mạc cùng tâm lý của một nhà vô địch, đá tảng sinh năm 1993 đang nhận về sự kỳ vọng lớn lao từ phía ban lãnh đạo cũng như NHM Man Utd. Niềm tin này sẽ trở nên vững chắc hơn thông qua lời nhận xét của Cristiano Ronaldo về Varane.
+                    </li>
+                    <li>Cựu tiền đạo Quỷ đỏ từng trải qua quãng thời gian 7 năm khoác chung màu áo cùng Varane. Chính vì vậy, anh hiểu rõ những giá trị mà ngôi sao 28 tuổi có thể đem lại. Năm 2013, trong một cuộc phỏng vấn với AS, Ronaldo từng nhận định về
+                        người đàn em:</li>
+                    <li>"Varane hiện đang học hỏi rất nhiều. Cậu ấy đã trưởng thành trên phương diện một cầu thủ và một người đàn ông. Cậu ấy nhanh nhẹn, kiểm soát tình huống tốt và cực kỳ điềm tĩnh. </li>
+                    <li>Cậu ấy đang tích lũy kinh nghiệm dù vẫn còn trẻ. Cậu ấy khiêm tốn và đối với tôi, trong vài năm nữa sẽ cậu ấy sẽ là một trong những trung vệ xuất sắc nhất thế giới. Tôi không nghi ngờ gì về điều đó."
                     </li>
                 </ul>
             </div>
 
             <!-- === 文章圖片 === -->
             <div class="newsRef_img">
-                <img src="images/newsRef-02.jpg">
-                <p>Neves thật sự tài năng.</p>
+                <img src="images/newsRef/newsRef3-02.jpg">
+                <p>Ronaldo từng có quãng thời gian dài thi đấu cùng Varane.</p>
             </div>
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
-                    <li>khoản phòng ngự, Neves đã có được số lần tắc bóng cao thứ năm tại Premier League mùa trước, và tổng số lần tắc bóng lẫn đánh chặn của anh ấy (136) là cao nhất trong đội Wolves. Con số đó ngang với Aaron Wan-Bissaka và cao hơn tất cả
-                        các cầu thủ Man Utd còn lại.</li>
-                    <li>Một khoản Neves cũng vượt trội là phạm vi chuyền bóng. Anh có khả năng kiến tạo từ vị trí lùi sâu theo cách tương tự như Michael Carrick. Và cơ hội tập luyện dưới sự dìu dắt của cựu tiền vệ Quỷ đỏ sẽ giúp anh tiến bộ hơn nữa. Mùa trước
-                        Neves đã hoàn thành 406 đường chuyền dài ở Premier League, hơn hẳn các cầu thủ Man Utd. Để so sánh, Fred có 250, Paul Pogba có 167 và Scott McTominay là 155.</li>
-                    <li>Với mức phí 35 triệu bảng, anh ấy rất đáng để Man Utd chiêu mộ, nhất là khi họ đã bỏ ra 73 triệu bảng để có Sancho, và có thể là 45 triệu bảng để có Varane. Neves bổ sung điều gì đó khác biệt cho hàng tiền vệ với sự kết hợp giữa chuyền
-                        và tắc bóng. Anh cũng có tiềm năng trở thành một cầu thủ tốt hơn với sự hỗ trợ của những đồng đội tài năng xung quanh. </li>
-                    <li>(Theo UnitedInfocus)</li>
-                    <li>Xem Bruno Fernandes ở ĐT Bồ Đào Nha</li>
+                    <li>Bất kỳ cầu thủ chuyên nghiệp nào ắt hẳn cũng phải ganh tỵ với sự nghiệp cũng như những danh hiệu mà Varane đã đạt được. Tính đến nay, anh đã giành tổng cộng 17 danh hiệu tình cả cấp độ CLB lẫn đội tuyển quốc gia, trong đó có 1 World
+                        Cup và 4 Champions League.</li>
+                    <li>Bên cạnh đó, việc được sát cánh bên cạnh các ngôi sao đẳng cấp suốt khoảng thời gian dài thi đấu cho Real cũng giúp Varane đúc kết không ít bài học quý giá. Do đó, NHM hoàn toàn có thể đặt niềm tin vào việc trung vệ 28 tuổi sẽ tiếp
+                        tục tỏa sáng trong màu áo mới, đồng thời khẳng định lời nhận xét của Ronaldo là chính xác.</li>
                 </ul>
             </div>
+            <!-- === 文章影片 === -->
+            <div class="newsRef_mv">
+                <p>Raphael Varane và lần ra sân thứ 350 cho Real Madrid</p>
+                <div>
+                    <iframe width="100%" src="https://www.youtube.com/embed/sYS3jk1yGkg" frameborder="0"></iframe>
+                </div>
+                <p>Trường Sơn | 07:36 28/07/2021</p>
+            </div>
         </div>
+
         <div class="newsRef_menu">
             <div class="newsRef_hot" id="newsRef_hot">
                 <div class="mainMsg-title">tin tức nóng</div>
